--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@ project/plugins/project/
 project/plugins/src_managed/
 project/plugins/target/
 target/
+trunk/project/plugins/lib_managed/
+trunk/project/plugins/project/
+trunk/project/plugins/src_managed/
